--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
+    <link rel="icon" href="/favicon.png">
+    <link rel="shortcut icon" href="/favicon.png">
+    <meta name="title" content="#VolvamosADebatir - ¡Sumate online este 31 de julio a las 10:30hs!">
+    <meta name="description" content="La desinformación como distorsión democrática: ¿Qué podemos hacer? Participá del encuentro para analizar cómo discutimos en las redes con una mirada humana, tecnológica y política.">
+    <meta property="og:url" content="https://debatamos.democraciaenred.org/">
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="#VolvamosADebatir - ¡Sumate online este 31 de julio a las 10:30hs!">
+    <meta property="og:description" content="La desinformación como distorsión democrática: ¿Qué podemos hacer? Participá del encuentro para analizar cómo discutimos en las redes con una mirada humana, tecnológica y política.">
+    <meta property="og:image" content="https://debatamos.democraciaenred.org/sharer01.jpg">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="565">
+    <meta name="twitter:title" content="#VolvamosADebatir - ¡Sumate online este 31 de julio a las 10:30hs!">
+    <meta name="twitter:description" content="La desinformación como distorsión democrática: ¿Qué podemos hacer? Participá del encuentro para analizar cómo discutimos en las redes con una mirada humana, tecnológica y política.">
+    <meta name="twitter:site" content="@fundacionDER">
+    <meta name="twitter:creator" content="@fundacionDER">
+    <meta name="twitter:image" content="https://debatamos.democraciaenred.org/sharer01.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <style>
+    .preloader,
+    .preloader:after {
+      border-radius: 50%;
+      width: 10em;
+      height: 10em;
+    }
+    .preloader {
+      margin: 60px auto;
+      font-size: 10px;
+      position: relative;
+      text-indent: -9999em;
+      border-top: 1.1em solid rgba(0,153,255, 0.2);
+      border-right: 1.1em solid rgba(0,153,255, 0.2);
+      border-bottom: 1.1em solid rgba(0,153,255, 0.2);
+      border-left: 1.1em solid #0099ff;
+      -webkit-transform: translateZ(0);
+      -ms-transform: translateZ(0);
+      transform: translateZ(0);
+      -webkit-animation: load8 1.1s infinite linear;
+      animation: load8 1.1s infinite linear;
+    }
+    @-webkit-keyframes load8 {
+      0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+      100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+      }
+    }
+    @keyframes load8 {
+      0% {
+        -webkit-transform: rotate(0deg);
+        transform: rotate(0deg);
+      }
+      100% {
+        -webkit-transform: rotate(360deg);
+        transform: rotate(360deg);
+      }
+    }
+    </style>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div id="app">
+      <div class="preloader"></div> 
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
